--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1 FROM DUAL
-jdbc_url=jdbc\:mysql\://localhost\:3306/testKuangjia?&useUnicode=true&characterEncoding=utf-8
+jdbc_url=jdbc\:mysql\://localhost\:3306/testkj?&useUnicode=true&characterEncoding=utf-8
 jdbc_username=root
 jdbc_password=123456
 
