--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	<!-- Spring config -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring.xml,classpath:spring-hibernate.xml</param-value>
+		<param-value>classpath:spring.xml</param-value>
 	</context-param>
 
 	<!-- openSessionInView config -->
